Fixed button wrap and added no-repeat

--- a/css/home.scss
+++ b/css/home.scss
@@ -28,6 +28,7 @@ div#superhero {
 	background-color: black;
 	background-position: center;
 	background-size: cover;
+	background-repeat: no-repeat;
 	
 	flex-direction: column;
 	
